--- a/demo-park-api/src/main/resources/application.properties
+++ b/demo-park-api/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.mvc.locale=pt_BR
 
 # POSTGRESQL
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://localhost:5432/demo_park
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo_park
 spring.datasource.username=postgres
 spring.datasource.password=bia123
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
@@ -15,3 +15,8 @@ spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# Springdoc OpenApi e Swegger
+springdoc.swagger-ui.path=/docs-park.html
+springdoc.api-docs.path=/docs-park
+springdoc.packagesToScan=com.balabenute.demo_park_api.web.controller
